<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="video_app_name">"Videos"</string>
    <string name="scanning">"Scanning SD card"</string>
    <string name="sdcard_missing_message">"Your phone does not have an SD card inserted."</string>
    <string name="video_list_empty">"No videos."</string>
    <string name="detail_title">"Title : %1$s"</string>
    <string name="detail_date_taken">"Taken : %1$s"</string>
    <string name="detail_path">"Path : %1$s"</string>
    <string name="detail_filesize">"File size : %1$s"</string>
    <string name="detail_duration">"Duration : %1$s"</string>
    <string name="media_detail">"Details"</string>
    <string name="delete">"Delete"</string>
    <string name="delete_tip">"Delete %1$s?"</string>
    <string name="delete_progress">"Deleting %1$s "</string>
    <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <!-- the copy of values-zh-rCN -->
    <string name="app_name">视频</string>
    <!-- The Mainmenu Activity -->
    <string name="activity_mainmenu_video">视频</string>
    <string name="activity_mainmenu_login">未登录</string>
    <string name="activity_mainmenu_localvideos">本地视频</string>
    <string name="activity_mainmenu_recentplay">最近播放</string>
    <string name="activity_mainmenu_total">共</string>
    <string name="activity_mainmenu_item">个</string>
    <!-- The Local Videos Activity -->
    <string name="activity_moviescontent_localvideso">本地视频</string>
    <string name="activity_moviescontent_edit">编辑</string>
    <string name="activity_moviescontent_cancle">取消</string>
    <string name="activity_moviescontent_selectall">全选</string>
    <string name="activity_moviescontent_deselectall">取消全选</string>
    <string name="activity_moviescontent_delete">删除</string>
    <!-- The Recent Play Activity -->
    <string name="activity_recentrecords_recentplay">播放历史</string>
    <string name="activity_recentrecords_edit">编辑</string>
    <string name="activity_recentrecords_cancle">取消</string>
    <string name="activity_recentrecords_selectall">全选</string>
    <string name="activity_recentrecords_deselectall">取消全选</string>
    <string name="activity_recentrecords_delete">删除</string>
    <string name="buffering">缓存中</string>

</resources>