<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/activity_recent_records_backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.66dp"
            android:background="@drawable/click_selector"
            android:padding="6dp"
            android:src="@drawable/nva_back" />

        <Button
            android:id="@+id/activity_recent_records_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2.66dp"
            android:layout_toRightOf="@+id/activity_recent_records_backarrow"
            android:background="@drawable/click_selector"
            android:clickable="true"
            android:paddingBottom="6dp"
            android:paddingRight="6dp"
            android:paddingTop="6dp"
            android:text="@string/activity_recentrecords_recentplay"
            android:textColor="#8a8a8a"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16.66dp" >

            <Button
                android:id="@+id/activity_recent_records_edit"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/click_selector"
                android:clickable="true"
                android:padding="6dp"
                android:text="@string/activity_recentrecords_edit"
                android:textColor="#8a8a8a"
                android:textSize="15sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/activity_recent_records_cancle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/click_selector"
                android:clickable="true"
                android:padding="6dp"
                android:text="@string/activity_recentrecords_cancle"
                android:textColor="#0dc0f4"
                android:textSize="15sp"
                android:visibility="gone" />
        </FrameLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/RecentRecord_FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_recent_records_linearbottom"
        android:layout_below="@+id/RelativeLayout1"
        android:layout_marginTop="8dp"
        android:background="#eeeeee"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:text="" />

        <ListView
            android:id="@+id/activity_recent_records_lv"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/video_bg"
            android:cacheColorHint="#00000000"
            android:paddingBottom="6dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:verticalSpacing="8dp" >
        </ListView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/RecentRecord_FrameLayout2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/activity_recent_records_linearbottom"
        android:layout_below="@+id/RelativeLayout1"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:background="#eeeeee"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/activity_movies_content_novideos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/activity_recentrecord_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/recentrecord_norecord_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_recentrecord_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="暂无播放记录"
                android:textColor="#e0e0e0"
                android:textSize="15sp" />
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/activity_recent_records_linearbottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="32dp"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="133dp"
                android:layout_height="32dp" >

                <Button
                    android:id="@+id/activity_recentrecords_allselceted"
                    android:layout_width="133dp"
                    android:layout_height="32dp"
                    android:background="@drawable/choice_click_press"
                    android:text="@string/activity_recentrecords_selectall"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/activity_recentrecords_cancleaselceted"
                    android:layout_width="133dp"
                    android:layout_height="32dp"
                    android:background="@drawable/choice_click_press"
                    android:text="@string/activity_recentrecords_deselectall"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:layout_width="32dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/activity_recentrecords_delete"
                android:layout_width="133dp"
                android:layout_height="32dp"
                android:background="@drawable/delete_click_press"
                android:text="@string/activity_recentrecords_delete"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>