<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/navigation"
        android:gravity="center"
        android:text="@string/activity_mainmenu_video"
        android:textColor="#00b9f7"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="166.66dp"
        android:background="#eeeeee"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/person_icon"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/person_icon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="" />

        <TextView
            android:id="@+id/menuactivity_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_mainmenu_login"
            android:textColor="#ababab"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:id="@+id/menuactivity_localvideos"
            android:layout_width="167.66dp"
            android:layout_height="158dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.33dp"
            android:background="@drawable/click_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/localvideo_icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:text="" />

            <TextView
                android:id="@+id/menuactivity_tv_localvideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:text="" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_mainmenu_localvideos"
                android:textColor="#1a1a1a"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuactivity_recentvideos"
            android:layout_width="167.66dp"
            android:layout_height="158dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.33dp"
            android:layout_toRightOf="@+id/menuactivity_localvideos"
            android:background="@drawable/click_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/recentvideo_icon" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:text="" />

            <TextView
                android:id="@+id/menuactivity_tv_recentvideos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:text="" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_mainmenu_recentplay"
                android:textColor="#1a1a1a"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>